--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
                     <span class="link-blue">Alternar conta</span>
                     ou
                     <span class="link-blue">Inscreva-se</span>
-                </p>
+                    </p>
+                </div>
+                <div class="get-the-app">
+                    <p class="get-app">Baixar o aplicativo</p>
+                    <div class="download">
+                        <a href="#" class="app-download"></a>
+                        <a href="#" class="app-download"></a>
+                    </div>
+                </div>
             </div>
-            <div class="get-the-app"></div>
-            <p class="get-app">Baixar o aplicativo</p>
-            <div class="download">
-                <a href="#" class="app-download"></a>
-                <a href="#" class="app-download"></a>
-            </div>
-        </div>
         </div>
     </body>
 </html>
